--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -17,7 +17,15 @@
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= current_user.name %> <span class="caret"></span></a>
               <ul class="dropdown-menu">
+                <li><%= link_to "My timeline", root_path(current_user) %></li>
+                <li role="separator" class="divider"></li>
                 <li><%= link_to "My profile", user_path(current_user) %></li>
+                <li role="separator" class="divider"></li>
+                <li><%= link_to "My favoritings", favoritings_user_path(current_user) %></li>
+                <li role="separator" class="divider"></li>
+                <li><%= link_to "My followings", followings_user_path(current_user) %></li>
+                <li role="separator" class="divider"></li>
+                <li><%= link_to "My followers", followers_user_path(current_user) %></li>
                 <li role="separator" class="divider"></li>
                 <li><%= link_to "Logout", logout_path, method: :delete %></li>
               </ul>
