--- a/app/views/toppages/index.html.erb
+++ b/app/views/toppages/index.html.erb
@@ -9,6 +9,14 @@
       <% end %>
     </aside>
     <div class="col-xs-8">
+
+    <ul class="nav nav-tabs nav-justified">
+      <li class="<%= "active" if current_page?(user_path(@user)) %>"><%= link_to root_path(@user) do %>Timeline<span class="badge"><%= @count_microposts %></span><% end %></li>
+      <li class="<%= "active" if current_page?(favoritings_user_path(@user)) %>"><%= link_to favoritings_user_path(@user) do %>Favoritings<span class="badge"><%= @count_favoritings %></span><% end %></li>
+      <li class="<%= "active" if current_page?(followings_user_path(@user)) %>"><%= link_to followings_user_path(@user) do %>Followings<span class="badge"><%= @count_followings %></span><% end %></li>
+      <li class="<%= "active" if current_page?(followers_user_path(@user)) %>"><%= link_to followers_user_path(@user) do %>Followers<span class="badge"><%= @count_followers %></span><% end %></li>
+    </ul>
+
       <%= render "microposts/microposts", microposts: @microposts, user: @user %>
     </div>
   </div>
