--- a/app/views/users/favoritings.html.erb
+++ b/app/views/users/favoritings.html.erb
@@ -17,6 +17,7 @@
       <li class="<%= "active" if current_page?(followings_user_path(@user)) %>"><%= link_to followings_user_path(@user) do %>Followings<span class="badge"><%= @count_followings %></span><% end %></li>
       <li class="<%= "active" if current_page?(followers_user_path(@user)) %>"><%= link_to followers_user_path(@user) do %>Followers<span class="badge"><%= @count_followers %></span><% end %></li>
     </ul>
-    <%= render "users", users: @followings %>
+      <%= render "microposts/microposts", microposts: @microposts, user: @user %>
+      
   </div>
 </div>
